# ECart

./: build.sh  manage.py  models.py  pyproject.toml  render.yaml  requirements.txt  settings.py  start.sh
shop/: admin.py  form.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_product_quantity.py  0003_alter_product_quantity.py  0004_alter_product_quantity.py  0005_cart.py  0006_favourite.py  0007_alter_cart_product_qty_alter_product_quantity.py  0008_alter_favourite_product_qty.py
shop/templates/shop/: cart.html  collections.html  fav.html  index.html  login.html  register.html
shop/templates/shop/inc/: footer.html  message.html  navbar.html  slider.html
shop/templates/shop/layouts/: main.html
shop/templates/shop/products/: index.html  product_details.html
vj_project/: asgi.py  settings.py  urls.py
